Improve Dutch vocabulary

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <p>Integreer naadloos geavanceerde AI-modellen (Claude, Gemini, GPT) in je workflows, applicaties en bedrijfsprocessen.</p>
                     <ul class="service-features">
                         <li>Ontwikkeling van AI-assistenten op maat</li>
-                        <li>LLM fine-tuning en deployment</li>
+                        <li>LLM uitrol en fine-tuning</li>
                         <li>Conversatie-agents & chatbots</li>
                         <li>API-integratie & automatisering</li>
                     </ul>
@@ -87,8 +87,8 @@
                     <h3>Infrastructuur Automatisering</h3>
                     <p>Bouw robuuste, schaalbare infrastructuur met Docker, Terraform en moderne DevOps-praktijken.</p>
                     <ul class="service-features">
-                        <li>Container orchestratie (Docker, Portainer)</li>
-                        <li>Infrastructure as Code (Terraform)</li>
+                        <li>Container beheer (Docker, Portainer)</li>
+                        <li>Infrastructuur as Code (Terraform)</li>
                         <li>CI/CD pipeline setup</li>
                         <li>Netwerkconfiguratie & beveiliging</li>
                     </ul>
