Add comprehensive mobile optimizations
- Add hamburger menu for mobile navigation with slide-in drawer
- Implement 4 responsive breakpoints (768px, 480px, 375px, 320px)
- Scale typography progressively for all screen sizes
- Fix service card overflow on small devices (320px width)
- Increase touch targets to 44px minimum (WCAG 2.1 compliant)
- Touch-friendly language switcher with proper spacing
- Disable parallax effect on mobile for better performance
- Add reduced motion support for accessibility
- Improve container padding on smaller screens
- Add print stylesheet for better printing
- Lock body scroll when mobile menu is open
- Close menu on link click, outside click, or toggle
- Full-width buttons with comfortable tap targets

Mobile UX improvements:
- Hero title: 3.5rem → 1.75rem (on smallest devices)
- Container padding: 2rem → 1rem (on small mobile)
- Section padding: 6rem → 3rem vertical (on small mobile)
- All grids adapt from multi-column to single column
- Language switcher: 13.6px → 44px minimum touch target
- Service cards: Fixed 350px minimum → Flexible 100% width

Performance:
- Parallax disabled on devices ≤768px
- Reduced CPU/GPU usage on mobile
- Smoother scrolling experience

Accessibility:
- WCAG 2.1 AA touch target compliance (44x44px)
- Reduced motion media query support
- Proper ARIA labels on interactive elements
- Keyboard navigation preserved

--- a/fr.html
+++ b/fr.html
@@ -18,12 +18,21 @@
                 <h1>Prompted</h1>
                 <span class="tagline">Solutions IA & Infrastructure</span>
             </div>
+            <button class="menu-toggle" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <ul class="nav-menu">
                 <li><a href="#services">Services</a></li>
                 <li><a href="#expertise">Expertise</a></li>
                 <li><a href="#about">À Propos</a></li>
-                <li><a href="#contact" class="btn-primary">Commencer</a></li>
-                <li class="lang-switch"><a href="en.html">EN</a> | <a href="index.html">NL</a> | <a href="fr.html" class="active">FR</a></li>
+                <li><a href="#contact" class="btn btn-primary">Commencer</a></li>
+                <li class="lang-switch">
+                    <a href="en.html">EN</a> |
+                    <a href="index.html">NL</a> |
+                    <a href="fr.html" class="active">FR</a>
+                </li>
             </ul>
         </div>
     </nav>
