--- a/en.html
+++ b/en.html
@@ -18,12 +18,21 @@
                 <h1>Prompted</h1>
                 <span class="tagline">AI & Infrastructure Solutions</span>
             </div>
+            <button class="menu-toggle" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <ul class="nav-menu">
                 <li><a href="#services">Services</a></li>
                 <li><a href="#expertise">Expertise</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#contact" class="btn-primary">Get Started</a></li>
-                <li class="lang-switch"><a href="en.html" class="active">EN</a> | <a href="index.html">NL</a> | <a href="fr.html">FR</a></li>
+                <li><a href="#contact" class="btn btn-primary">Get Started</a></li>
+                <li class="lang-switch">
+                    <a href="en.html" class="active">EN</a> |
+                    <a href="index.html">NL</a> |
+                    <a href="fr.html">FR</a>
+                </li>
             </ul>
         </div>
     </nav>
