Add live demos section with links to demo sites
- Added demos section to all three language versions (NL, EN, FR)
- Updated navigation to include Demos link
- Added clarification for vision demo (browser-based lightweight model vs specialized trained models)
- Styled demo cards with hover effects and proper spacing

--- a/en.html
+++ b/en.html
@@ -30,6 +30,7 @@
             <ul class="nav-menu">
                 <li><a href="#services">Services</a></li>
                 <li><a href="#expertise">Expertise</a></li>
+                <li><a href="#demos">Demos</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact" class="btn btn-primary">Get Started</a></li>
@@ -248,6 +249,38 @@
                         <span class="tag">Markdown</span>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Live Demos Section -->
+    <section id="demos" class="demos">
+        <div class="container">
+            <div class="section-header">
+                <h2>Live Demos</h2>
+                <p>Explore examples of modern, responsive web applications</p>
+            </div>
+            <div class="demos-grid">
+                <a href="https://coffeedemo.prompted.sbs" target="_blank" class="demo-card">
+                    <div class="demo-icon">☕</div>
+                    <h3>Coffee Shop</h3>
+                    <p>Modern café website with online ordering system and menu showcase</p>
+                    <span class="demo-link">coffeedemo.prompted.sbs →</span>
+                </a>
+
+                <a href="https://visiondemo.prompted.sbs" target="_blank" class="demo-card">
+                    <div class="demo-icon">👁️</div>
+                    <h3>AI Vision Demo</h3>
+                    <p>Browser-based lightweight vision model for demonstration purposes. For QA and production use cases, specialized trained models provide significantly higher reliability and accuracy.</p>
+                    <span class="demo-link">visiondemo.prompted.sbs →</span>
+                </a>
+
+                <a href="https://shopdemo.prompted.sbs" target="_blank" class="demo-card">
+                    <div class="demo-icon">🛒</div>
+                    <h3>Tech Store</h3>
+                    <p>E-commerce platform with product pages and shopping cart functionality</p>
+                    <span class="demo-link">shopdemo.prompted.sbs →</span>
+                </a>
             </div>
         </div>
     </section>
