--- a/fr.html
+++ b/fr.html
@@ -30,6 +30,7 @@
             <ul class="nav-menu">
                 <li><a href="#services">Services</a></li>
                 <li><a href="#expertise">Expertise</a></li>
+                <li><a href="#demos">Démos</a></li>
                 <li><a href="#projects">Projets</a></li>
                 <li><a href="#about">À Propos</a></li>
                 <li><a href="#contact" class="btn btn-primary">Commencer</a></li>
@@ -248,6 +249,38 @@
                         <span class="tag">Markdown</span>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Live Demos Section -->
+    <section id="demos" class="demos">
+        <div class="container">
+            <div class="section-header">
+                <h2>Démos en Direct</h2>
+                <p>Explorez des exemples d'applications web modernes et réactives</p>
+            </div>
+            <div class="demos-grid">
+                <a href="https://coffeedemo.prompted.sbs" target="_blank" class="demo-card">
+                    <div class="demo-icon">☕</div>
+                    <h3>Coffee Shop</h3>
+                    <p>Site web moderne de café avec système de commande en ligne et présentation du menu</p>
+                    <span class="demo-link">coffeedemo.prompted.sbs →</span>
+                </a>
+
+                <a href="https://visiondemo.prompted.sbs" target="_blank" class="demo-card">
+                    <div class="demo-icon">👁️</div>
+                    <h3>Démo Vision IA</h3>
+                    <p>Modèle de vision léger basé sur navigateur à des fins de démonstration. Pour l'assurance qualité et les cas d'utilisation en production, les modèles spécialisés entraînés offrent une fiabilité et une précision nettement supérieures.</p>
+                    <span class="demo-link">visiondemo.prompted.sbs →</span>
+                </a>
+
+                <a href="https://shopdemo.prompted.sbs" target="_blank" class="demo-card">
+                    <div class="demo-icon">🛒</div>
+                    <h3>Magasin Tech</h3>
+                    <p>Plateforme e-commerce avec pages produits et fonctionnalité de panier d'achat</p>
+                    <span class="demo-link">shopdemo.prompted.sbs →</span>
+                </a>
             </div>
         </div>
     </section>
