--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <ul class="nav-menu">
                 <li><a href="#services">Diensten</a></li>
                 <li><a href="#expertise">Expertise</a></li>
+                <li><a href="#demos">Demo's</a></li>
                 <li><a href="#projects">Projecten</a></li>
                 <li><a href="#about">Over Mij</a></li>
                 <li><a href="#contact" class="btn btn-primary">Aan de Slag</a></li>
@@ -248,6 +249,38 @@
                         <span class="tag">Markdown</span>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Live Demos Section -->
+    <section id="demos" class="demos">
+        <div class="container">
+            <div class="section-header">
+                <h2>Live Demo's</h2>
+                <p>Bekijk voorbeelden van moderne, responsieve web applicaties</p>
+            </div>
+            <div class="demos-grid">
+                <a href="https://coffeedemo.prompted.sbs" target="_blank" class="demo-card">
+                    <div class="demo-icon">☕</div>
+                    <h3>Coffee Shop</h3>
+                    <p>Modern café website met online bestelsysteem en menu showcase</p>
+                    <span class="demo-link">coffeedemo.prompted.sbs →</span>
+                </a>
+
+                <a href="https://visiondemo.prompted.sbs" target="_blank" class="demo-card">
+                    <div class="demo-icon">👁️</div>
+                    <h3>AI Vision Demo</h3>
+                    <p>Browser-gebaseerd lightweight vision model voor demonstratie. Voor QA en productie-doeleinden bieden gespecialiseerde getrainde modellen aanzienlijk hogere betrouwbaarheid en nauwkeurigheid.</p>
+                    <span class="demo-link">visiondemo.prompted.sbs →</span>
+                </a>
+
+                <a href="https://shopdemo.prompted.sbs" target="_blank" class="demo-card">
+                    <div class="demo-icon">🛒</div>
+                    <h3>Tech Store</h3>
+                    <p>E-commerce platform met productpagina's en winkelwagen functionaliteit</p>
+                    <span class="demo-link">shopdemo.prompted.sbs →</span>
+                </a>
             </div>
         </div>
     </section>
