Improve Dutch wording for vision demo description
- Changed 'QA' to 'kwaliteitscontrole' (more natural in Dutch)
- Changed 'gespecialiseerde getrainde' to 'speciaal getrainde gespecialiseerde' (better flow)

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <a href="https://visiondemo.prompted.sbs" target="_blank" class="demo-card">
                     <div class="demo-icon">👁️</div>
                     <h3>AI Vision Demo</h3>
-                    <p>Browser-gebaseerd lightweight vision model voor demonstratie. Voor QA en productie-doeleinden bieden gespecialiseerde getrainde modellen aanzienlijk hogere betrouwbaarheid en nauwkeurigheid.</p>
+                    <p>Browser-gebaseerd lightweight vision model voor demonstratie. Voor kwaliteitscontrole- en productiedoeleinden bieden speciaal getrainde gespecialiseerde modellen aanzienlijk hogere betrouwbaarheid en nauwkeurigheid.</p>
                     <span class="demo-link">visiondemo.prompted.sbs →</span>
                 </a>
 
