--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <a href="https://visiondemo.prompted.sbs" target="_blank" class="demo-card">
                     <div class="demo-icon">👁️</div>
                     <h3>AI Vision Demo</h3>
-                    <p>Browser-gebaseerd lightweight vision model voor demonstratie. Voor kwaliteitscontrole- en productiedoeleinden bieden speciaal getrainde gespecialiseerde modellen aanzienlijk hogere betrouwbaarheid en nauwkeurigheid.</p>
+                    <p>Browser-gebaseerd lightweight vision model voor demonstratie.<br><br>Voor kwaliteitscontrole- en productiedoeleinden bieden speciaal getrainde gespecialiseerde modellen aanzienlijk hogere betrouwbaarheid en nauwkeurigheid.</p>
                     <span class="demo-link">visiondemo.prompted.sbs →</span>
                 </a>
 
